fixes issue with overlay on safari

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -74,6 +74,7 @@
   position: absolute;
   inset: 0;
   background: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
 }
 
