--- a/src/styles/gradient-bg.css
+++ b/src/styles/gradient-bg.css
@@ -57,8 +57,9 @@
   left: 0;
 
   opacity: 0.95;
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(8px);
+  background: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(16px);
+  backdrop-filter: blur(16px);
 
   animation: fadeIn 0.9s ease-in-out; /* Add animation */
 }
